--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
+    "gun": "^0.2020.520",
     "leaflet": "^1.6.0",
     "quasar": "^1.0.0",
+    "vue-gun": "^0.0.3",
     "vue-i18n": "^8.0.0",
     "vue2-leaflet": "^2.5.2"
   },
